// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import tests default renderer 1`] = `
<div
  className="Import"
>
  <ForwardRef(WithStyles(FullScreenDialog))
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Import"
        id="cboard.components.Settings.Import.import"
        values={Object {}}
      />
    }
  >
    <ForwardRef(WithStyles(ForwardRef(Paper)))>
      <ForwardRef(WithStyles(ForwardRef(List)))>
        <ForwardRef(WithStyles(ForwardRef(ListItem)))
          className="Import__ListItem"
        >
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Import__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Import"
                id="cboard.components.Settings.Import.import"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={
                  Object {
                    "cboardLink": <ForwardRef(WithStyles(ForwardRef(Link)))
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Cboard
                    </ForwardRef(WithStyles(ForwardRef(Link)))>,
                    "link": <ForwardRef(WithStyles(ForwardRef(Link)))
                      href="https://www.openboardformat.org/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      OpenBoard
                    </ForwardRef(WithStyles(ForwardRef(Link)))>,
                  }
                }
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <div
              className="Import__ButtonContainer"
            >
              <ForwardRef(WithStyles(ForwardRef(Button)))
                color="primary"
                component="span"
                disabled={false}
                id="import-button"
                variant="contained"
              >
                <label
                  htmlFor="file"
                >
                  <FormattedMessage
                    defaultMessage="Import"
                    id="cboard.components.Settings.Import.import"
                    values={Object {}}
                  />
                </label>
                <input
                  id="file"
                  onChange={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  type="file"
                />
              </ForwardRef(WithStyles(ForwardRef(Button)))>
            </div>
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
      </ForwardRef(WithStyles(ForwardRef(List)))>
    </ForwardRef(WithStyles(ForwardRef(Paper)))>
  </ForwardRef(WithStyles(FullScreenDialog))>
</div>
`;

exports[`Import tests loading behavior 1`] = `
<div
  className="Import"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Import"
        id="cboard.components.Settings.Import.import"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))
          className="Import__ListItem"
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Import__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Import"
                id="cboard.components.Settings.Import.import"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={
                  Object {
                    "cboardLink": <ForwardRef(WithStyles(ForwardRef(Link)))
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Cboard
                    </ForwardRef(WithStyles(ForwardRef(Link)))>,
                    "link": <ForwardRef(WithStyles(ForwardRef(Link)))
                      href="https://www.openboardformat.org/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      OpenBoard
                    </ForwardRef(WithStyles(ForwardRef(Link)))>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Import__ButtonContainer"
            >
              <WithStyles(ForwardRef(Button))
                color="primary"
                component="span"
                disabled={false}
                id="import-button"
                variant="contained"
              >
                <label
                  htmlFor="file"
                >
                  <FormattedMessage
                    defaultMessage="Import"
                    id="cboard.components.Settings.Import.import"
                    values={Object {}}
                  />
                </label>
                <input
                  id="file"
                  onChange={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  type="file"
                />
              </WithStyles(ForwardRef(Button))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Import tests loading behavior 2`] = `
<div
  className="Import"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Import"
        id="cboard.components.Settings.Import.import"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))
          className="Import__ListItem"
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Import__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Import"
                id="cboard.components.Settings.Import.import"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={
                  Object {
                    "cboardLink": <ForwardRef(WithStyles(ForwardRef(Link)))
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Cboard
                    </ForwardRef(WithStyles(ForwardRef(Link)))>,
                    "link": <ForwardRef(WithStyles(ForwardRef(Link)))
                      href="https://www.openboardformat.org/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      OpenBoard
                    </ForwardRef(WithStyles(ForwardRef(Link)))>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Import__ButtonContainer"
            >
              <WithStyles(ForwardRef(CircularProgress))
                className="Import__ButtonContainer--spinner"
                size={25}
                thickness={7}
              />
              <WithStyles(ForwardRef(Button))
                color="primary"
                component="span"
                disabled={true}
                id="import-button"
                variant="contained"
              >
                <label
                  htmlFor="file"
                >
                  <FormattedMessage
                    defaultMessage="Import"
                    id="cboard.components.Settings.Import.import"
                    values={Object {}}
                  />
                </label>
                <input
                  id="file"
                  onChange={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  type="file"
                />
              </WithStyles(ForwardRef(Button))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;
